revised pcl implementation

--- a/ros2_ws/src/pcl_transform/CMakeLists.txt
+++ b/ros2_ws/src/pcl_transform/CMakeLists.txt
@@ -18,11 +18,14 @@ find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(tf2_py REQUIRED)
 find_package(tf2_eigen REQUIRED)  
+find_package(OpenCV REQUIRED)
+find_package(cv_bridge REQUIRED)
 
 include_directories(
   ${PCL_INCLUDE_DIRS}
   ${tf2_ros_INCLUDE_DIRS}
   ${tf2_eigen_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
   include
 )
 
@@ -36,6 +39,8 @@ target_link_libraries(camera_to_world ${PCL_LIBRARIES} ${tf2_ros_LIBRARIES} ${tf
 add_executable(downsample src/downsample.cpp)
 target_link_libraries(downsample ${PCL_LIBRARIES} ${tf2_ros_LIBRARIES} ${tf2_eigen_LIBRARIES})
 
+add_executable(object_segmentation src/object_segmentation.cpp)
+target_link_libraries(downsample ${PCL_LIBRARIES} ${tf2_ros_LIBRARIES} ${tf2_eigen_LIBRARIES} ${OpenCV_LIBS})
 
 add_executable(segmentation_process src/segmentation_process.cpp)
 target_link_libraries(segmentation_process ${PCL_LIBRARIES} ${tf2_ros_LIBRARIES} ${tf2_eigen_LIBRARIES})
@@ -61,6 +66,20 @@ ament_target_dependencies(
 )
 
 ament_target_dependencies(
+  object_segmentation
+  rclcpp
+  std_msgs
+  sensor_msgs
+  pcl_conversions
+  tf2_ros
+  tf2_eigen  
+  tf2_geometry_msgs
+  OpenCV
+  cv_bridge
+)
+
+
+ament_target_dependencies(
   segmentation_process
   rclcpp
   std_msgs
@@ -74,6 +93,7 @@ ament_target_dependencies(
 install(TARGETS
   camera_to_world
   downsample
+  object_segmentation
   segmentation_process
   DESTINATION lib/${PROJECT_NAME}
 )
