added launch files for object perception packages

--- a/ros2_ws/src/pcl_transform/CMakeLists.txt
+++ b/ros2_ws/src/pcl_transform/CMakeLists.txt
@@ -98,6 +98,13 @@ install(TARGETS
   DESTINATION lib/${PROJECT_NAME}
 )
 
+# Install the launch directory
+install(
+  DIRECTORY 
+    launch
+  DESTINATION 
+    share/${PROJECT_NAME}
+)
 
 ament_python_install_package(${PROJECT_NAME})
 
