--- a/ros2_ws/src/ros2_ggcnn/package.xml
+++ b/ros2_ws/src/ros2_ggcnn/package.xml
@@ -8,7 +8,7 @@
   <license>Apache-2.0</license>
 
   <depend>rclpy</depend>
-  <depend>custom_interfaces</depend>
+  <depend>capgrasp_itf</depend>
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>std_msgs</depend>
